HTML home pronto

--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
         <div class="banner">
             <h3>Texto Decorativo</h3>
         </div>
-        <div class="sobre">
+        <div class="sobre container">
             <h3>Sobre</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias dolore quis eius illo molestiae est cumque fuga, at neque. Numquam molestiae alias rerum nulla! Qui repellat minus ex est saepe.</p>
         </div>
-        <div class="descritivo">
+        <div class="descritivo container">
             <div class="imgsobre">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi illo exercitationem ipsam accusantium optio officia reiciendis ratione distinctio alias, dolores quibusdam deleniti sed corporis labore quam vitae porro aspernatur animi.</p>
             </div>
@@ -46,7 +46,7 @@
         <h2>Eventos</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos omnis corporis, aut sed ipsa repellendus distinctio.</p>
         </div>
-        <div class="evento">
+        <div class="evento container">
                 <div class="infoevento">
                     <div class="imgevento">
                         <h4>Texto Decorativo</h4>
@@ -55,73 +55,77 @@
                         <h5>Informações do Evento</h5>
                         <ul>
                             <li>Requisitos:</li>
-                            <li>Níveaadasdal:</li>
-                            <li>Qual Evento vai Acontecer:</li>
-                            <li>Responsável pelo Evento:</li>
-                            <li>Atrações Confirmadas:</li>
-                        </ul>
-                        </div>
-                    </div>
-                <div>
-                    <div class="imgevento">
-                        <h4>Texto Decorativo</h4>
-                    </div>
-                        <div>
-                        <h5>Informações do Evento</h5>
-                        <ul>
-                            <li>Requisitos:</li>
                             <li>Nível:</li>
                             <li>Qual Evento vai Acontecer:</li>
                             <li>Responsável pelo Evento:</li>
                             <li>Atrações Confirmadas:</li>
                         </ul>
                         </div>
-                </div>
-                <div>
-                    <div class="imgevento">
-                        <h4>Texto Decorativo</h4>
                     </div>
-                        <div>
-                        <h5>Informações do Evento</h5>
-                        <ul>
-                            <li>Requisitos:</li>
-                            <li>Nível:</li>
-                            <li>Qual Evento vai Acontecer:</li>
-                            <li>Responsável pelo Evento:</li>
-                            <li>Atrações Confirmadas:</li>
-                        </ul>
-                        </div>
-                </div>
             <h5>Ver todos</h5>
-        <div class="prevnext">
-            <button onclick="plusDivs(1)">&#10094;Proximo</button>
-            <button onclick="plusDivs(-1)">&#10095;Anterior</button>
         </div>
         <div class="contato">
             <h2>Contato</h2>
         </div>
         <div class="entrecontato">
             <h3>Entre em Contato</h3>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+        </div>
+        <div class="formularios container">
+            <form action="contato" method="post">
+                <div class="campo">
+                    <label for="nome" id="nome"></label>
+                    <input type="text" name="nome" id="nome">
+                </div>
+                <div class="campo">
+                    <label for="email" id="email"></label>
+                    <input type="email" name="email" id="email">
+                </div>
+                <div class="campo">
+                    <label for="mensagem" id="msg"></label>
+                    <input type="text" name="mensagem" id="msg">
+                </div>
+                <button type="submit">Enviar</button>
+            </form>
         </div>
     </main>
-    <script>
-        var slideIndex = 1;
-        showDivs(slideIndex);
-        
-        function plusDivs(n) {
-          showDivs(slideIndex += n);
-        }
-        
-        function showDivs(n) {
-          var i;
-          var x = document.getElementsByClassName("mySlides");
-          if (n > x.length) {slideIndex = 1}
-          if (n < 1) {slideIndex = x.length}
-          for (i = 0; i < x.length; i++) {
-            x[i].style.display = "none";  
-          }
-          x[slideIndex-1].style.display = "block";  
-        }
-    </script>
+    <footer>
+        <div class="outra">
+            <div class="outras">
+                <h4>Outras</h4>
+                <ul>
+                    <li><a href="#">Termos de Uso</a></li>
+                    <li><a href="#">Licença</a></li>
+                    <li><a href="#">Parcerias</a></li>
+                    <li><a href="#">Colaboradores</a></li>
+                </ul>
+            </div>
+            <div class="outras">
+                <h4>Outras</h4>
+                <ul>
+                    <li><a href="#">Contratos e Serviços</a></li>
+                    <li><a href="#">Notícias</a></li>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">Eventos</a></li>
+                </ul>
+            </div>
+            <div class="outras">
+                <h4>Outras</h4>
+                <ul>
+                    <li><a href="#">Junte-se a Nós</a></li>
+                    <li><a href="#">Trabalhe Conosco</a></li>
+                    <li><a href="#">Equipe</a></li>
+                    <li><a href="#">Eventos</a></li>
+                    <li><a href="#">Premiados</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="sociais">
+            <a href="#"><img src="img/001-facebook.svg" alt="Link para Facebook do Site"></a>
+            <a href="#"><img src="img/002-instagram.svg" alt="Link para Instagram do Site"></a>
+            <a href="#"><img src="img/003-twitter.svg" alt="Link para Twitter do Site"></a>
+        </div>
+        <p>Todos os Direitos Reservados</p>
+    </footer>
 </body>
 </html>
