--- a/cadastroadmev.html
+++ b/cadastroadmev.html
@@ -1,12 +1,56 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Esportes Radicais - Cadastro Administrador e Eventos</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
+    <header>
+        <div class="cabecalho">
+            <div class="container">
+                <div class="topmobile">
+                    <h1>Esportes Radicais</h1>
+                    <nav>
+                        <ul class="inicio">
+                            <li><a href="#">Home</a></li>
+                            <li><a href="#">Sobre</a></li>
+                            <li><a href="#">Planos</a></li>
+                            <li><a href="#">Contato</a></li>
+                        </ul>
+                        <ul class="inicio2">
+                            <li><a href="#">Cadastro</a></li>
+                            <li><a href="#">Login</a></li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
+            <div class="banner2">
+                <img src="img/cadastroevento-mobile.png" alt="Imagem de um homem praticando o paraquedismo">
+            </div>
+        </div>
+    </header>
+    <main>
+        <div>
+            <div class="cadastroadm">
+            <h2 class="botao">Cadastro de Administrador de Eventos</h2>
+            </div>
+        </div>
+        <div class="container">
+            <section class="adm_form">
+                <nav>
+                    <ul>
+                        li
+                    </ul>
+                </nav>
+            </section>
+        </div>
+        
+    </main>
 
 </body>
+
 </html>
