home finalizada no mobile

--- a/index.html
+++ b/index.html
@@ -14,12 +14,16 @@
                 <nav>
                     <ul>
                         <li><a href="#">Home</a></li>
+                        <li>-</li>
                         <li><a href="#">Sobre</a></li>
+                        <li>-</li>
                         <li><a href="#">Planos</a></li>
+                        <li>-</li>
                         <li><a href="#">Contato</a></li>
                     </ul>
                     <ul>
                         <li><a href="#">Cadastro</a></li>
+                        <li>-</li>
                         <li><a href="#">Login</a></li>
                     </ul>
                 </nav>
@@ -32,18 +36,27 @@
         </div>
         <div class="sobre container">
             <h3>Sobre</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias dolore quis eius illo molestiae est cumque fuga, at neque. Numquam molestiae alias rerum nulla! Qui repellat minus ex est saepe.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
         </div>
         <div class="descritivo container">
-            <div class="imgsobre">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi illo exercitationem ipsam accusantium optio officia reiciendis ratione distinctio alias, dolores quibusdam deleniti sed corporis labore quam vitae porro aspernatur animi.</p>
+            <div>
+            <div class="imgsobre"><img src="/img/003-motorcycle.svg" alt="Imagem Ilustrativa Esporte Radical"></div>
+            <h3>Lorem ipsum</h3>
             </div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        </div>
+        <div class="descritivo container">
+            <div>
+            <div class="imgsobre"><img src="img/002-ski.svg" alt="Imagem Ilustrativa Esporte Radical"></div>
+            <h3>Lorem ipsum</h3>
+            </div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
         </div>
         <div class="banner2">
             <h3>Texto Decorativo</h3>
         </div>
         <div class="eventos">
-        <h2>Eventos</h2>
+        <h3>Eventos</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos omnis corporis, aut sed ipsa repellendus distinctio.</p>
         </div>
         <div class="evento container">
@@ -62,28 +75,28 @@
                         </ul>
                         </div>
                     </div>
-            <h5>Ver todos</h5>
+                <a href="#">Ver Todos</a>
+        </div>
+        <div class="banner3">
+            <h3>Contato</h3>
         </div>
         <div class="contato">
-            <h2>Contato</h2>
-        </div>
-        <div class="entrecontato">
             <h3>Entre em Contato</h3>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
         </div>
-        <div class="formularios container">
+        <div class="forms container">
             <form action="contato" method="post">
                 <div class="campo">
                     <label for="nome" id="nome"></label>
-                    <input type="text" name="nome" id="nome">
+                    <input type="text" name="nome" id="nome" placeholder="Nome">
                 </div>
                 <div class="campo">
                     <label for="email" id="email"></label>
-                    <input type="email" name="email" id="email">
+                    <input type="email" name="email" id="email" placeholder="E-mail">
                 </div>
                 <div class="campo">
                     <label for="mensagem" id="msg"></label>
-                    <input type="text" name="mensagem" id="msg">
+                    <textarea name="mensagem" id="msg" cols="30" rows="10" placeholder="Mensagem"></textarea>
                 </div>
                 <button type="submit">Enviar</button>
             </form>
@@ -120,7 +133,7 @@
                 </ul>
             </div>
         </div>
-        <div class="sociais">
+        <div class="sociais container">
             <a href="#"><img src="img/001-facebook.svg" alt="Link para Facebook do Site"></a>
             <a href="#"><img src="img/002-instagram.svg" alt="Link para Instagram do Site"></a>
             <a href="#"><img src="img/003-twitter.svg" alt="Link para Twitter do Site"></a>
