--- a/assinatura.html
+++ b/assinatura.html
@@ -11,7 +11,7 @@
 <body>
     <header>
             <div class="topmobile">
-                <h1>Esportes Radicais</h1>
+                <h1 class="logo">Esportes Radicais</h1>
                 <nav>
                     <ul class="nave">
                         <li><a href="#">Home</a></li>
@@ -29,23 +29,27 @@
     </header>
 </body>
 <main>
-    <div class="banner">
-        <img class="Banner" src="img/bg.png" alt="homem no parkour">
+    <div class="banner">    
         <h1 class="texto">ASSOCIE-SE</h1>
+        <img class="parkour" src="img/bg.png" alt="homem no parkour">
     </div>
     <div class="Planos">
         <h2>Planos</h2>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eligendi, ut assumenda! Numquam nihil blanditiis
+        <p class="planost">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eligendi, ut assumenda! Numquam nihil blanditiis
             minima quo atque ut quis maxime molestias molestiae, cum quae quasi, deleniti dolore ea quibusdam nemo!Lorem
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci qui optio minus dolores sapiente, esse
             laudantium molestias alias, perferendis consequatur, aut omnis maxime recusandae quo illo? Ut ex non
             ratione?</p>
     </div>
     <div class="Plano1">
+        <div class="noticia">
         <img class="propaganda" src="img/banner2.jpg" alt="propaganda">
+        <div class="preco">
         <h3>Plano Básico</h3>
         <p class="valor">R$10,00</p>
-        <p class="texto">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illo neque eveniet accusamus sint vel sed facere
+    </div>
+    </div>
+        <p class="planost">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illo neque eveniet accusamus sint vel sed facere
             placeat! Tempora magnam, dignissimos error modi neque reprehenderit. A neque voluptas eum! Praesentium,
             deleniti. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magni incidunt saepe, sint praesentium
             sed optio ratione minima, ex enim eveniet facere modi quis voluptatibus! Repellat sint assumenda commodi
@@ -53,13 +57,19 @@
             voluptates eaque repudiandae, unde nemo quod fuga laudantium voluptatibus, veritatis quas voluptatem
             doloribus! Minima ad dolor accusantium minus. </p>
             <h3 class="associar">Associar-se</h3>
+         </div>
+            
         </div>
     </div>
     <div class="Plano2">
+        <div class="noticia">
         <img class="propaganda" src="img/banner2.jpg" alt="propaganda">
+        <div class="preco">
         <h3>Plano Amador</h3>
         <p class="valor">R$25,00</p>
-        <p class="texto">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illo neque eveniet accusamus sint vel sed facere
+    </div>
+    </div>
+        <p class="planost">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illo neque eveniet accusamus sint vel sed facere
             placeat! Tempora magnam, dignissimos error modi neque reprehenderit. A neque voluptas eum! Praesentium,
             deleniti. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magni incidunt saepe, sint praesentium
             sed optio ratione minima, ex enim eveniet facere modi quis voluptatibus! Repellat sint assumenda commodi
@@ -70,10 +80,14 @@
         </div>
     </div>
     <div class="Plano1">
+        <div class="noticia">
         <img class="propaganda" src="img/banner2.jpg" alt="propaganda">
+        <div class="preco">
         <h3>Plano Intermediário</h3>
         <p class="valor">R$40,00</p>
-        <p class="texto">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illo neque eveniet accusamus sint vel sed facere
+    </div>
+    </div>
+        <p class="planost">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illo neque eveniet accusamus sint vel sed facere
             placeat! Tempora magnam, dignissimos error modi neque reprehenderit. A neque voluptas eum! Praesentium,
             deleniti. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magni incidunt saepe, sint praesentium
             sed optio ratione minima, ex enim eveniet facere modi quis voluptatibus! Repellat sint assumenda commodi
@@ -84,10 +98,14 @@
         </div>
     </div>
     <div class="Plano2">
+        <div class="noticia">
         <img class="propaganda" src="img/banner2.jpg" alt="propaganda">
+        <div class="preco">
         <h3>Plano Profissional</h3>
         <p class="valor">R$68,00</p>
-        <p class="texto">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illo neque eveniet accusamus sint vel sed facere
+    </div>
+    </div>
+        <p class="planost">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illo neque eveniet accusamus sint vel sed facere
             placeat! Tempora magnam, dignissimos error modi neque reprehenderit. A neque voluptas eum! Praesentium,
             deleniti. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magni incidunt saepe, sint praesentium
             sed optio ratione minima, ex enim eveniet facere modi quis voluptatibus! Repellat sint assumenda commodi
