home finalizada em todas as responsividades

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
                         <li>-</li>
                         <li><a href="#">Contato</a></li>
                     </ul>
+                </nav>
+                <nav>
                     <ul>
                         <li><a href="#">Cadastro</a></li>
                         <li>-</li>
@@ -33,29 +35,40 @@
     <main>
         <div class="banner">
             <h3>Texto Decorativo</h3>
+            <p>Lorem Ipsum é simplesmente uma simulação de texto da indústria tipográfica e de impressos, e vem sendo utilizado desde o século XVI.</p>
+            <a href="#" class="block">Saiba Mais</a>
         </div>
         <div class="sobre container">
             <h3>Sobre</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
         </div>
-        <div class="descritivo container">
-            <div>
-            <div class="imgsobre"><img src="/img/003-motorcycle.svg" alt="Imagem Ilustrativa Esporte Radical"></div>
-            <h3>Lorem ipsum</h3>
+        <div class="row container">
+            <div class="descritivo container">
+                <div>
+                <div class="imgsobre"><img src="/img/003-motorcycle.svg" alt="Imagem Ilustrativa Esporte Radical"></div>
+                <h3>Lorem ipsum</h3>
+                </div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
             </div>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-        </div>
-        <div class="descritivo container">
-            <div>
-            <div class="imgsobre"><img src="img/002-ski.svg" alt="Imagem Ilustrativa Esporte Radical"></div>
-            <h3>Lorem ipsum</h3>
+            <div class="descritivo container">
+                <div>
+                <div class="imgsobre"><img src="img/002-ski.svg" alt="Imagem Ilustrativa Esporte Radical"></div>
+                <h3>Lorem ipsum</h3>
+                </div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
             </div>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            <div class="descritivo container block">
+                <div>
+                <div class="imgsobre"><img src="img/001-mission.svg" alt="Imagem Ilustrativa Esporte Radical"></div>
+                <h3>Lorem ipsum</h3>
+                </div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            </div>
         </div>
         <div class="banner2">
             <h3>Texto Decorativo</h3>
         </div>
-        <div class="eventos">
+        <div class="eventos container">
         <h3>Eventos</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos omnis corporis, aut sed ipsa repellendus distinctio.</p>
         </div>
@@ -63,6 +76,7 @@
                 <div class="infoevento">
                     <div class="imgevento">
                         <h4>Texto Decorativo</h4>
+                        <p class="block">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur nulla animi, adipisci magni quas ullam repellat voluptas.</p>
                     </div>
                         <div>
                         <h5>Informações do Evento</h5>
@@ -74,7 +88,7 @@
                             <li>Atrações Confirmadas:</li>
                         </ul>
                         </div>
-                    </div>
+                </div>
                 <a href="#">Ver Todos</a>
         </div>
         <div class="banner3">
