home com página de cadastro juntos

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                     <label for="mensagem" id="msg"></label>
                     <textarea name="mensagem" id="msg" cols="30" rows="10" placeholder="Mensagem"></textarea>
                 </div>
-                <button type="submit">Enviar</button>
+                <button class="button" type="submit">Enviar</button>
             </form>
         </div>
     </main>
