--- a/cadastroadmev.html
+++ b/cadastroadmev.html
@@ -34,58 +34,148 @@
     </header>
 
     <main>
-        <div class="banner2">
-                <img src="img/cadastroevento-mobile.png" alt="Imagem de um homem praticando o paraquedismo">
-            </div>
-        <div>
-            <div class="cadastroadm">
-                <h2 class="botao">Cadastro de Administrador de Eventos</h2>
-            </div>
-        </div>
-        <div class="container">
+        <section>
             <div>
-                <form class="form_adm" action="" method="post">
-                    <!--Formulario-->
-                    <div class="campo">
-                        <label for="nome"></label>
-                        <input type="text" name="nomecompletodousuario" id="nome" placeholder="Nome Completo">
+                <div class="bannersurf">
+                    <img src="img/cadastroevento-mobile.png" alt="Imagem de um homem praticando o paraquedismo">
+                </div>
+                <div class="cadastroadm">
+                    <h2 class="botao">Cadastro de Administrador de Eventos</h2>
+                </div>
+                <div class="container">
+                    <div>
+                        <form class="form_adm" action="" method="post">
+                            <!--Formulario-->
+                            <div class="escrita">
+                                <label for="nome"></label>
+                                <input type="text" name="nomecompletodousuario" id="nome" placeholder="Nome Completo">
+                            </div>
+                            <div class="escrita">
+                                <div class="data">
+                                    <label for="nascimento">Data de Nascimento:</label>
+                                    <input type="date" name="nascimento" id="nascimento" max="2020-03-16">
+                                </div>
+                            </div>
+                            <div class="escrita">
+                                <label for="email"></label>
+                                <input type="email" name="email" id="email" placeholder="E-mail">
+                            </div>
+                            <div class="escrita">
+                                <label for="telefone"></label>
+                                <input type="telephone" name="telefone" id="telefone" placeholder="Número de Telefone">
+                            </div>
+                            <div class="escrita">
+                                <label for="endereço"></label>
+                                <input type="text" name="endereço" id="endereço" placeholder="Endereço">
+                            </div>
+                            <div class="escrita">
+                                <div class="esporte">
+                                    <label for="esportes">Qual Esporte se proficionalizou</label>
+                                    <select name="esportes" id="esportes">
+                                        <option value="selecione">Selecione Aqui</option>
+                                        <option value="skate">Skate</option>
+                                        <option value="basquete">Basquete</option>
+                                        <option value="natação">Natação</option>
+                                        <option value="parkour">Parkour</option>
+                                        <option value="dança">Dança</option>
+                                </div>
+                                </select>
+                                <div>
+                                    <button type=submit class="botao">
+                                        <h3>Cadastre-se</h3>
+                                    </button>
+                                </div>
+                            </div>
+                        </form>
                     </div>
-                    <div class="campo">
-                        <div class="data">
-                            <label for="nascimento">Data de Nascimento:</label>
-                            <input type="date" name="nascimento" id="nascimento" max="2020-03-16">
-                        </div>
-                    </div>
-                    <div class="campo">
-                        <label for="email"></label>
-                        <input type="email" name="email" id="email" placeholder="E-mail">
-                    </div>
-                    <div class="campo">
-                        <label for="telefone"></label>
-                        <input type="telephone" name="telefone" id="telefone" placeholder="Número de Telefone">
-                    </div>
-                    <div class="campo">
-                        <label for="endereço"></label>
-                        <input type="text" name="endereço" id="endereço" placeholder="Endereço">
-                    </div>
-                    <div class="campo">
-                        <div class="esporte">
-                            <label for="esportes">Qual Esporte se proficionalizou</label>
-                            <select name="esportes" id="esportes">
-                                <option value="selecione">Selecione Aqui</option>
-                                <option value="skate">Skate</option>
-                                <option value="basquete">Basquete</option>
-                                <option value="natação">Natação</option>
-                                <option value="parkour">Parkour</option>
-                                <option value="dança">Dança</option>
-                        </div>
-                        </select>
-                    </div>
-                </form>
-                </nav>
+                </div>
             </div>
+        </section>
+            <div class="bannerpratique">
+                <img src="img/cadastroevento-mobile.png" alt="Homem praticando surf">
+                <p>Pratique esporte</p>
+            </div>
+            <div class="cadastroadm">
+                <h2 class="botao">Cadastro de Eventos</h2>
+            </div>
+            <section>
+            <div class="container">
+                <div>
+                    <form class="form_adm" action="" method="post">
+                        <!--Formulario eventos-->
+                        <div class="escrita">
+                            <label for="nome"></label>
+                            <input type="text" name="nomecompletodousuario" id="nome" placeholder="Nome do evento">
+                        </div>
+                        <div class="escrita">
+                            <div class="eventoesporte">
+                                <label for="eventoesporte">Qual esporte será o foco:</label>
+                                <select name="eventoesporte" id="eventoesporte">
+                                    <option value="Selecione Aqui">Selecione Aqui</option>
+                                    <option value="Skete">Skate</option>
+                                    <option value="Basquete">Basquete</option>
+                                    <option value="Natação">Natação</option>
+                                    <option value="Bumbjump">Bumbjump</option>
+                                    <option value="partkour">Parkour</option>
+                            </div>
+                        </div>
+                        <div class="escrita">
+                            <div class="nivel">
+                                <label for="nivel">Nível do Campeonato</label>
+                            </div>
+                        </div>
+                            </select>
+                            <div>
+                                <button type=submit class="botao">
+                                    <h3>Cadastre-se</h3>
+                                </button>
+                            </div>
+                        </div>
+                    </form>
+        </section>
+
 
     </main>
+
+    <footer>
+        <div class="outra">
+            <div class="outras">
+                <h4>Outras</h4>
+                <ul>
+                    <li><a href="#">Termos de Uso</a></li>
+                    <li><a href="#">Licença</a></li>
+                    <li><a href="#">Parcerias</a></li>
+                    <li><a href="#">Colaboradores</a></li>
+                </ul>
+            </div>
+            <div class="outras">
+                <h4>Outras</h4>
+                <ul>
+                    <li><a href="#">Contratos e Serviços</a></li>
+                    <li><a href="#">Notícias</a></li>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">Eventos</a></li>
+                </ul>
+            </div>
+            <div class="outras">
+                <h4>Outras</h4>
+                <ul>
+                    <li><a href="#">Junte-se a Nós</a></li>
+                    <li><a href="#">Trabalhe Conosco</a></li>
+                    <li><a href="#">Equipe</a></li>
+                    <li><a href="#">Eventos</a></li>
+                    <li><a href="#">Premiados</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="sociais container">
+            <a href="#"><img src="img/001-facebook.svg" alt="Link para Facebook do Site"></a>
+            <a href="#"><img src="img/002-instagram.svg" alt="Link para Instagram do Site"></a>
+            <a href="#"><img src="img/003-twitter.svg" alt="Link para Twitter do Site"></a>
+        </div>
+        <p>Todos os Direitos Reservados</p>
+    </footer>
+
 
 </body>
 
