inicio da responsividade do tablet

--- a/cadastroadmev.html
+++ b/cadastroadmev.html
@@ -36,6 +36,12 @@
     <main>
         <section>
             <div>
+                <div class="bannerstopo">
+                    <picture>
+                        <source media="(min-widht= 769px)" srcset="img/banner2.jpg">
+                        <source media="(min-widht: 1200px)" srcset="img/banner2.jpg">
+                    </picture>
+                </div>
                 <div class="bannersurf">
                     <img src="img/cadastroevento-mobile.png" alt="Imagem de um homem praticando o paraquedismo">
                 </div>
