--- a/cadastroadmev.html
+++ b/cadastroadmev.html
@@ -15,7 +15,7 @@
                 <h1>Esportes Radicais</h1>
                 <nav>
                     <ul>
-                        <li><a href="#">Home</a></li>
+                        <li><a href="index.html">Home</a></li>
                         <li>-</li>
                         <li><a href="#">Sobre</a></li>
                         <li>-</li>
