encaminhamento para a página de cadastro

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 </nav>
                 <nav>
                     <ul>
-                        <li><a href="#">Cadastro</a></li>
+                        <li><a href="cadastroadmev.html">Cadastro</a></li>
                         <li>-</li>
                         <li><a href="#">Login</a></li>
                     </ul>
