--- a/index.html
+++ b/index.html
@@ -13,18 +13,18 @@
                 <h1>Esportes Radicais</h1>
                 <nav>
                     <ul>
-                        <li><a href="#">Home</a></li>
+                        <li><a href="index.html">Home</a></li>
                         <li>-</li>
                         <li><a href="#">Sobre</a></li>
                         <li>-</li>
-                        <li><a href="#">Planos</a></li>
+                        <li><a href="planos.html">Planos</a></li>
                         <li>-</li>
                         <li><a href="#">Contato</a></li>
                     </ul>
                 </nav>
                 <nav>
                     <ul>
-                        <li><a href="#">Cadastro</a></li>
+                        <li><a href="cadastroadmev.html">Cadastro</a></li>
                         <li>-</li>
                         <li><a href="#">Login</a></li>
                     </ul>
