--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div class="banner">
             <h3>Texto Decorativo</h3>
             <p>Lorem Ipsum é simplesmente uma simulação de texto da indústria tipográfica e de impressos, e vem sendo utilizado desde o século XVI.</p>
-            <a href="#" class="block">Saiba Mais</a>
+            <a href="planos.html" class="block">Saiba Mais</a>
         </div>
         <div class="sobre container">
             <h3>Sobre</h3>
